add more fixes